src/objects/Apppage__c.object
<CustomObject>
    <description>Actual pages for mobile app. This is where springboards launch from.

Use attachments to associate an image with the page</description>
    <fields>
        <fullName>Background_Color__c</fullName>
        <description>Background color(hex) for the App Page</description>
        <label>Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Image__c</fullName>
        <label>Background Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DemoApp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DemoApp</label>
        <referenceTo>DemoApp__c</referenceTo>
        <relationshipLabel>App Pages</relationshipLabel>
        <relationshipName>App_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>App Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Apppage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>